# chained-universe

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  rustc-ice-2026-04-05T20_01_01-79550.txt  rustc-ice-2026-04-05T20_05_10-81208.txt  rustc-ice-2026-04-05T20_38_07-81417.txt  rustc-ice-2026-04-05T20_42_06-81503.txt  skills-lock.json  world.json  world_program.json
.agents/skills/colosseum-copilot/: SKILL.md
.agents/skills/colosseum-copilot/references/: api-reference.md  grid-recipes.md  the-grid-skill.md  workflow-deep.md
.agents/skills/solana-new/: SKILL.md
.agents/skills/solana-new/agents/: openai.yaml
.agents/skills/solana-new/references/: solana-new-reference.md
.claude/: settings.local.json
.claude/skills/: colosseum-copilot
.github/workflows/: backend-tests.yml
app/: package.json
app/src/: App.tsx  constants.ts
app/src/states/: game.ts
docs/: game-state-program.md  mainnet-readiness.md  migration-history.md  privacy-encrypt-integration.md  unified-state-architecture.md
programs/component-fleet/: Cargo.toml
programs/component-fleet/src/: lib.rs
programs/component-investigation/: Cargo.toml
programs/component-investigation/src/: lib.rs
programs/component-planet/: Cargo.toml
programs/component-planet/src/: lib.rs
programs/component-research/: Cargo.toml
programs/component-research/src/: lib.rs
programs/component-resources/: Cargo.toml
programs/component-resources/src/: lib.rs
programs/game-state/: Cargo.toml
programs/game-state/src/: constants.rs  contexts.rs  error.rs  lib.rs  state.rs  utils.rs
programs/game-state/src/instructions/: handlers.rs  mod.rs
programs/market/: Cargo.toml
programs/market/src/: constants.rs  error.rs  lib.rs  state.rs  types.rs  utils.rs
programs/market/src/instructions/: admin.rs  mod.rs  offers.rs  planet_listings.rs
programs/private-state/: Cargo.toml
programs/private-state/src/: lib.rs
programs/system-attack/: Cargo.toml
programs/system-attack/src/: lib.rs
programs/system-build/: Cargo.toml
programs/system-build/src/: lib.rs
programs/system-initialize/: Cargo.toml
programs/system-initialize-new-colony/: Cargo.toml
programs/system-initialize-new-colony/src/: lib.rs
programs/system-initialize/src/: lib.rs
programs/system-launch/: Cargo.toml
programs/system-launch/src/: lib.rs
programs/system-produce/: Cargo.toml
programs/system-produce/src/: lib.rs
programs/system-registry/: Cargo.toml
programs/system-registry/src/: lib.rs
programs/system-research/: Cargo.toml
programs/system-research/src/: lib.rs
programs/system-resolve-colonize/: Cargo.toml
programs/system-resolve-colonize/src/: lib.rs
programs/system-resolve-transport/: Cargo.toml
programs/system-resolve-transport/src/: lib.rs
programs/system-session/: Cargo.toml
programs/system-session/src/: lib.rs
programs/system-shipyard/: Cargo.toml
programs/system-shipyard/src/: lib.rs
scripts/: approve-systems.ts  constants.ts  create-world-fixed.ts  create-world.ts  dev-resolve-private-spy-report.cjs  extend-private-state-through-squads.cjs  init-devnet-configs.cjs  package-lock.json  package.json  tsconfig.json  upgrade-private-state-through-squads.cjs
src/: App.tsx  constants.ts  game.ts
tests/: solargrid.ts
