[package]
name = "component-fleet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "component_fleet"

[features]
default = []
cpi = ["export-idl"]
export-idl = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["bolt-lang/idl-build"]

[dependencies]
bolt-lang = { workspace = true }
