[package]
name = "component-planet"
version = "0.1.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib", "lib"]
name = "component_planet"
path = "src/lib.rs"
 
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
 
[dependencies]
bolt-lang = { version = "=0.2.2" }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
