[package]
name    = "system-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "system_registry"

[features]
no-entrypoint = []
no-idl        = []
no-log-ix-name = []
cpi           = ["no-entrypoint"]
default       = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }